--- a/2. Data Modeling/5. Project 2 - Data Modeling with Apache Cassandra/Project_1B_ Project_Template.ipynb
+++ b/2. Data Modeling/5. Project 2 - Data Modeling with Apache Cassandra/Project_1B_ Project_Template.ipynb
@@ -211,9 +211,6 @@
    },
    "outputs": [],
    "source": [
-    "# This should make a connection to a Cassandra instance your local machine \n",
-    "# (127.0.0.1)\n",
-    "\n",
     "from cassandra.cluster import Cluster\n",
     "cluster = Cluster()\n",
     "\n",
@@ -238,8 +235,6 @@
    },
    "outputs": [],
    "source": [
-    "# TO-DO: Create a Keyspace \n",
-    "\n",
     "try:\n",
     "    session.execute(\"\"\"\n",
     "    CREATE KEYSPACE IF NOT EXISTS sparkify \n",
@@ -269,8 +264,6 @@
    },
    "outputs": [],
    "source": [
-    "# TO-DO: Set KEYSPACE to the keyspace specified above\n",
-    "\n",
     "try:\n",
     "    session.set_keyspace('sparkify')\n",
     "    \n",
@@ -329,12 +322,10 @@
    },
    "outputs": [],
    "source": [
-    "## TO-DO: Query 1:  Give me the artist, song title and song's length in the music app history that was heard during \\\n",
-    "## sessionId = 338, and itemInSession = 4\n",
-    "\n",
-    "query = \"CREATE TABLE IF NOT EXISTS music_app_history \"\n",
+    "query = \"CREATE TABLE IF NOT EXISTS artist_length \"\n",
     "query = query + \"(sessionId int, itemInSession int, artist text, song text, length float, \\\n",
     "                    PRIMARY KEY(sessionId, itemInSession))\"\n",
+    "# Created table based on what's needed from a query (song title and song's length)\n",
     "\n",
     "try:\n",
     "    session.execute(query)\n",
@@ -351,7 +342,6 @@
    },
    "outputs": [],
    "source": [
-    "# We have provided part of the code to set up the CSV file. Please complete the Apache Cassandra code below#\n",
     "file = 'event_datafile_new.csv'\n",
     "\n",
     "with open(file, encoding = 'utf8') as f:\n",
@@ -359,8 +349,7 @@
     "    next(csvreader) # skip header\n",
     "    for line in csvreader:\n",
     "        \n",
-    "## TO-DO: Assign the INSERT statements into the `query` variable\n",
-    "        query = \"INSERT INTO music_app_history (sessionId, itemInSession, artist, song, length) \"\n",
+    "        query = \"INSERT INTO artist_length (sessionId, itemInSession, artist, song, length) \"\n",
     "        query = query + \"VALUES (%s, %s, %s, %s, %s);\"\n",
     "        ## TO-DO: Assign which column element should be assigned for each column in the INSERT statement.\n",
     "        ## For e.g., to INSERT artist_name and user first_name, you would change the code below to `line[0], line[1]`\n",
@@ -394,8 +383,7 @@
     }
    ],
    "source": [
-    "## TO-DO: Add in the SELECT statement to verify the data was entered into the table\n",
-    "query = 'SELECT artist, song, length from music_app_history WHERE sessionId = 338 AND itemInSession = 4'\n",
+    "query = 'SELECT artist, song, length from artist_length WHERE sessionId = 338 AND itemInSession = 4'\n",
     "\n",
     "try:\n",
     "    rows = session.execute(query)\n",
@@ -435,17 +423,16 @@
     }
    ],
    "source": [
-    "## TO-DO: Query 2: Give me only the following: name of artist, song (sorted by itemInSession) and user (first and last name)\\\n",
-    "## for userid = 10, sessionid = 182\n",
-    "\n",
     "try:\n",
-    "    session.execute(\"DROP TABLE IF EXISTS music_app_history2;\")\n",
+    "    session.execute(\"DROP TABLE IF EXISTS song_playlist_session;\")\n",
     "except Exception as e:\n",
     "    print(e)\n",
     "\n",
-    "query = \"CREATE TABLE IF NOT EXISTS music_app_history2 \"\n",
+    "query = \"CREATE TABLE IF NOT EXISTS song_playlist_session \"\n",
     "query = query + \"(userId int, sessionId int, itemInSession int, artist text, song text, firstName text, lastName text, \\\n",
     "                PRIMARY KEY((userId, sessionId), itemInSession))\"\n",
+    "\n",
+    "# Created table based on what's needed from a query (artist name, song, and user)\n",
     "\n",
     "try:\n",
     "    session.execute(query)\n",
@@ -457,13 +444,13 @@
     "    next(csvreader) # skip header\n",
     "    for line in csvreader:\n",
     "\n",
-    "        query = \"INSERT INTO music_app_history2 (userId, sessionId, itemInSession, artist, song, firstName, lastName) \"\n",
+    "        query = \"INSERT INTO song_playlist_session (userId, sessionId, itemInSession, artist, song, firstName, lastName) \"\n",
     "        query = query + \"VALUES (%s, %s, %s, %s, %s, %s, %s);\"\n",
     "        ## TO-DO: Assign which column element should be assigned for each column in the INSERT statement.\n",
     "        ## For e.g., to INSERT artist_name and user first_name, you would change the code below to `line[0], line[1]`\n",
     "        session.execute(query, (int(line[10]), int(line[8]), int(line[3]), line[0], line[9], line[1], line[4]))\n",
     "        \n",
-    "query = \"SELECT artist, song, firstName, lastName from music_app_history2 WHERE userID = 10 AND sessionId = 182\"\n",
+    "query = \"SELECT artist, song, firstName, lastName from song_playlist_session WHERE userID = 10 AND sessionId = 182\"\n",
     "\n",
     "try:\n",
     "    rows = session.execute(query)\n",
@@ -479,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {
     "editable": true
    },
@@ -488,22 +475,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tegan Levine\n",
       "Jacqueline Lynch\n",
+      "Tegan Levine\n",
       "Sara Johnson\n"
      ]
     }
    ],
    "source": [
-    "## TO-DO: Query 3: Give me every user name (first and last) in my music app history who listened to the song 'All Hands Against His Own'\n",
-    "\n",
     "try:\n",
-    "    session.execute(\"DROP TABLE IF EXISTS music_app_history3;\")\n",
+    "    session.execute(\"DROP TABLE IF EXISTS username_song;\")\n",
     "except Exception as e:\n",
     "    print(e)\n",
     "\n",
-    "query = \"CREATE TABLE IF NOT EXISTS music_app_history3 \"\n",
-    "query = query + \"(song text, firstName text, lastName text, PRIMARY KEY(song, lastName))\"\n",
+    "query = \"CREATE TABLE IF NOT EXISTS username_song \"\n",
+    "query = query + \"(userId int, sessionId int, firstName text, lastName text, song text, PRIMARY KEY(song, userId));\"\n",
+    "\n",
+    "# Created table based on what's needed from a query (username)\n",
     "\n",
     "try:\n",
     "    session.execute(query)\n",
@@ -515,14 +502,14 @@
     "    next(csvreader) # skip header\n",
     "    for line in csvreader:\n",
     "\n",
-    "        query = \"INSERT INTO music_app_history3 (song, firstName, lastName) \"\n",
-    "        query = query + \"VALUES (%s, %s, %s);\"\n",
+    "        query = \"INSERT INTO username_song (userId, sessionId, firstName, lastName, song) \"\n",
+    "        query = query + \"VALUES (%s, %s, %s, %s, %s);\"\n",
     "        ## TO-DO: Assign which column element should be assigned for each column in the INSERT statement.\n",
     "        ## For e.g., to INSERT artist_name and user first_name, you would change the code below to `line[0], line[1]`\n",
-    "        session.execute(query, (line[9], line[1], line[4]))\n",
+    "        session.execute(query, (int(line[10]), int(line[8]), line[1], line[4], line[9]))\n",
     "        \n",
     "# user name (first and last) in my music app history who listened to the song 'All Hands Against His Own'¶\n",
-    "query = \"SELECT firstName, lastName from music_app_history2 WHERE song='All Hands Against His Own' ALLOW FILTERING;\"\n",
+    "query = \"SELECT firstName, lastName from username_song WHERE song='All Hands Against His Own';\"\n",
     "\n",
     "try:\n",
     "    rows = session.execute(query)\n",
@@ -565,27 +552,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "editable": true
    },
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "unexpected EOF while parsing (<ipython-input-16-d048536725c6>, line 6)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-16-d048536725c6>\"\u001b[0;36m, line \u001b[0;32m6\u001b[0m\n\u001b[0;31m    session.execute(\"DROP TABLE IF EXISTS music_app_history3\")\u001b[0m\n\u001b[0m                                                              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "## TO-DO: Drop the table before closing out the sessions\n",
+    "\n",
     "\n",
     "try:\n",
-    "    session.execute(\"DROP TABLE IF EXISTS music_app_history;\")\n",
-    "    session.execute(\"DROP TABLE IF EXISTS music_app_history2;\")\n",
-    "    session.execute(\"DROP TABLE IF EXISTS music_app_history3\")"
+    "    session.execute(\"DROP TABLE IF EXISTS artist_length;\")\n",
+    "    session.execute(\"DROP TABLE IF EXISTS song_playlist_session;\")\n",
+    "    session.execute(\"DROP TABLE IF EXISTS username_song\")\n",
+    "    print(\"Dropped tables\")\n",
+    "except Exception as e:\n",
+    "    print(e)"
    ]
   },
   {
